2008-07-15  Johan Dahlin  <johan@gnome.org>

	Bug 450659 – h2def.py - export 'typedef struct' object definitions not
	working

	* codegen/h2def.py:
	Patch by Lauro Moura

2008-07-14  Johan Dahlin  <johan@gnome.org>

	Bug 471559 – add AM_PROG_CC_C_O to configure.ac for recent automake

	* configure.ac:
	Patch by Tim Mooney

2008-07-14  Johan Dahlin  <johan@gnome.org>

	Bug 448173 – use python-config to get python includes

	* configure.ac:
	Really close the by, patch by Matthias Klose

2008-07-14  Johan Dahlin  <johan@gnome.org>

	Bug 378704 – OptionParser.parse_args() returns unexpected results

	* gobject/option.py:
	Patch by Johannes Hölzl

2008-07-14  Johan Dahlin  <johan@gnome.org>

	Bug 491773 – autoconf failure: .m4 files cannot be found

	* Makefile.am:
	Patch by macks@netspace.org

2008-07-14  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gio/gfile.override: wrap File.load_contents_async and
	File.load_contents_finish

	* gio/gio.defs: Add docstring for the above methods.

	* tests/test_gio.py: Add a test for the above methods.

2008-07-14  Johan Dahlin  <johan@gnome.org>
	
	Bug 487523 – Add xslfiles variable to .pc.in files

	* pygobject-2.0-uninstalled.pc.in:
	Add xslfiles variable, patch by Damien Carbery

2008-07-14  Johan Dahlin  <johan@gnome.org>

	* gio/gio.defs:
	Remove g_file_input_stream_seek and g_file_output_stream_seek,
	they already implement the seekable interface.

2008-07-14  Johan Dahlin  <johan@gnome.org>
	
	Bug 504337 - crash bug in gobject.Timeout and gobject.Idle
	
	* gobject/pygsource.c:
	* tests/test_source.py:
	Fix crash in Timeout and Idle, patch by Bryan Silverthorn.

2008-07-14  Johan Dahlin  <johan@gnome.org>

	* codegen/argtypes.py: 
	Map GSeekType to an int
	
	* gio/gfileinfo.override:
	* gio/ginputstream.override:
	* gio/goutputstream.override:
	Add comments for missing API

2008-07-14  Johan Dahlin  <johan@gnome.org>

	* gio/Makefile.am:
	* gio/gfile.override:
	* gio/ginputstream.override:
	* gio/gio.override: